# reasoning-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  troubleshooting.md
.github/scripts/: check_double_quotes.py  check_notebook_line_length.py
.github/workflows/: basic-test-nightly-pytorch.yml  basic-tests-all-os-uv.yml  basic-tests-old-pytorch.yml  basic-tests-pip.yml  check-links.yml  check-spelling-errors.yml  code-linter.yml  notify-ci-success.yml  real-download-tests.yml  sync.yml  tests-linux.yml  tests-macos.yml  tests-windows.yml
ch01/: README.md
ch02/: README.md  ch02_exercise-solutions.ipynb  ch02_main.ipynb  python-instructions.md
ch02/01_main-chapter-code/: README.md  ch02_exercise-solutions.ipynb  ch02_main.ipynb
ch02/02_setup-tips/: README.md  gpu-instructions.md  python-instructions.md
ch02/03_optimized-LLM/: README.md  compare_inference.py
ch02/04_torch-compile-windows/: README.md
ch02/05_use_model/: README.md  chat.py  chat_multiturn.py  generate_simple.py
ch03/: README.md
ch03/01_main-chapter-code/: README.md  ch03_exercise-solutions.ipynb  ch03_main.ipynb  evaluate_math500.py  evaluate_math500_batched.py  math_new50_exercise.json
ch03/02_math500-verifier-scripts/: README.md  evaluate_json.py  evaluate_math500.py  evaluate_math500_batched.py
ch06/: README.md
ch07/: README.md
ch08/: README.md
chC/: README.md  chC_main.ipynb
chD/: README.md  chD_main.ipynb
chE/: README.md  chE_main.ipynb
chF/: README.md
chG/: README.md
reasoning/: __init__.py  ch02.py
reasoning_from_scratch/: __init__.py  appendix_c.py  appendix_f.py  ch02.py  ch02_ex.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  qwen3.py  qwen3_batched.py  qwen3_optimized.py  utils.py
tests/: README.md  conftest.py  test_appendix_c.py  test_appendix_d.py  test_appendix_f.py  test_batched_equivalence.py  test_ch02.py  test_ch02_ex.py  test_ch03.py  test_ch03_advanced_parser.py  test_ch04.py  test_ch05.py  test_ch06.py  test_ch07.py  test_ch07_scripts.py  test_ch08.py  test_ch08_huggingface.py  test_chC.py  test_minimax_distillation.py  test_qwen3.py  test_qwen3_batched.py  test_qwen3_batched_stop.py  test_qwen3_optimized.py
(+113 files in other folders)
